--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,37 @@
   --white: #fff;
 }
 
+.Ball-shadow {
+  height: 25px;
+  width: 100px;
+  background-color: black;
+  border-radius: 60% 60% 60% 60%;
+}
+
+.Ball-shadow-container {
+  min-height: 460px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.Bouncing-ball-container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 32px;
+}
+
+.Bouncing-ball {
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+  background-color: red;
+  z-index: 100;
+}
+
 a {
   margin-top: 16px;
 }
